--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4",
     "web3": "4.8.0",
-    "ws": ">=8.18.0"
+    "ws": ">=8.18.0",
+    "elliptic": ">=6.6.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
