--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "web-vitals": "^2.1.4",
     "web3": "4.8.0",
     "ws": ">=8.18.0",
-    "elliptic": ">=6.6.1"
+    "elliptic": ">=6.6.1",
+    "sha.js": ">=2.4.12"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
